--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,9 @@ h2 {
     border: none;
     box-shadow: 2px 2px 4px 0px grey;
 }
+.menubuttondesktop {
+    display: none;
+}
 .menukortlink {
     text-decoration: none;
     color: black;
@@ -429,12 +432,27 @@ hr {
     border-color: #da7897;
 }
 
-.forsidemenu{
+.forsidemenu {
     text-align: left;
-    display: flex;   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    flex-wrap: nowrap;
+}
+.forsidemenutext{
+    text-align: center;
+    display: flex;
+    padding-left: 30px;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: flex-start;
+    width: 50%;
+    height: 50%;
 }
 h2 {
-    text-align: left;
+    text-align: center;
     font-size: 1.2rem;
     font-family: playfairdisplay;
     padding-bottom: 1rem;
@@ -480,10 +498,24 @@ h2 {
     object-fit: cover;
 }
 .imagesfrontmenu {
+    display: flex;
     position: relative;
     width: 275px;
     height: 275px;
+    margin-right: 15rem;
 
+}
+.menubuttondesktop {
+    background-color: #da7897;
+    border-radius: 20px;
+    width: 6.5rem;
+    padding: 10px 20px;
+    z-index: 4;
+    position: absolute;
+    border: none;
+    box-shadow: 2px 2px 4px 0px grey;
+    top: 52%;
+    left: 21%;
 }
 
 .menubutton {
@@ -497,6 +529,7 @@ h2 {
     position: absolute;
     border: none;
     box-shadow: 2px 2px 4px 0px grey;
+    display: none;
 }
 .menukortlink {
     text-decoration: none;
