--- a/css/style.css
+++ b/css/style.css
@@ -441,13 +441,12 @@ hr {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-content: center;
     flex-wrap: nowrap;
 }
 .forsidemenutext{
     text-align: center;
     display: flex;
-    padding-left: 30px;
+    padding-left: 0.3rem;
     flex-direction: column;
     align-content: center;
     justify-content: center;
@@ -455,7 +454,6 @@ hr {
     width: 50%;
     height: 50%;
 }
-
 
 h2 {
     text-align: center;
@@ -515,7 +513,7 @@ h2 {
     position: relative;
     width: 275px;
     height: 275px;
-    margin-right: 15rem;
+    margin-right: 22rem;
 
 }
 .menubuttondesktop {
@@ -550,14 +548,21 @@ h2 {
     font-weight: bold;
 }
 
+section.forsideevents {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 12rem;
+    flex-direction: row-reverse;
+}
+
+section.forsideeventstext {
+    height: 50%;
+    width: 50%;
+}
+
 .eventshr{
     margin-left: 30px;
     margin-right: 30px;
-}
-
-.eventsh2{
-    padding-top: 8rem;
-
 }
 
 .eventstekst{
