--- a/css/events.css
+++ b/css/events.css
@@ -142,6 +142,10 @@ h2 {
     margin-left: 30px;
 }
 
+.kreainfohr{
+    display: none;
+}
+
 .kreah2{
     padding-top: 2rem;
 }
@@ -302,7 +306,7 @@ padding: 15px;
 .menu ul li a {
 color: black;
 text-decoration: none;
-font-size: 18px;
+font-size: 1.5rem;
 display: block;
 }
 
@@ -313,6 +317,7 @@ display: block;
 
 h2 {
 font-family: playfairdisplay;
+font-size: 1.5rem;
 }
 header {
 padding: 30px;
@@ -342,7 +347,7 @@ hr.inforhr{
 }
 
 .infotext {
-font-size: 1rem;
+font-size: 1.3rem;
 text-align: justify;
 line-height: 1.8rem;
 padding-left: 3rem;
@@ -352,7 +357,7 @@ padding-top: 1.5rem;
 
 h2 {
 text-align: center;
-font-size: 1.2rem;
+font-size: 1.5rem;
 font-family: playfairdisplay;
 padding-bottom: 1rem;
 }
@@ -381,22 +386,28 @@ width: 110%;
 height: 140%;
 z-index: 2;
 object-fit: cover;
+
 }
 .runhr {
-margin-top: 4rem;
-margin-right: 30px;
-margin-left: 30px;
+display: none;
 }
 
 .kreah2{
-padding-top: 2rem;
+padding-top: 10rem;
+padding-left: 37rem;
+}
+
+.kreainfohr{
+    border-color: #da7897;
+    margin-left: 43rem;
+    width: 43%;
 }
 
 .kreatext {
 font-size: 1rem;
 text-align: justify;
 line-height: 1.8rem;
-padding-left: 3rem;
+padding-left: 40rem;
 padding-right: 3rem;
 }
 .kreaimages {
