--- a/css/menu.css
+++ b/css/menu.css
@@ -97,10 +97,7 @@ justify-content: space-between;
 text-decoration: none;
 padding-left: 30px;
 padding-right: 30px;
-
-
-
- }
+}
 
 .morgenhr {
     margin-left: 30px;
@@ -108,7 +105,9 @@ padding-right: 30px;
     margin-bottom: 15px;
 
 }
-
+.morgenmadhr{
+    display: none;
+}
 a {
     text-decoration: none;
     color: black;
@@ -333,8 +332,8 @@ section {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 50px;
-        height: 60px;
+        width: 100px;
+        height: 130px;
         margin: auto; /* Centrerer containeren horisontalt */
         padding-bottom: 10px;
     }
@@ -345,40 +344,10 @@ section {
 display: none;
 }
 
-/* Styling af burgerikonet */
-.burger {
-display: flex;
-flex-direction: column;
-cursor: pointer;
-position: absolute;
-top: 10px;
-right: 10px;
-width: 30px;
-margin: 10px;
-align-items: right;
-}
-
-.line {
-height: 3px;
-background-color: #da7897; /* Farve på linjerne */
-margin: 5px 0;
-border-radius: 2px; /* Runding af hjørner */
-}
-
-/* Styling af menuen */
-.menu {
-display: none; /* Skjul menuen som standard */
-background-color: #da7897;
-position: absolute;
-top: 90px; /* Placer menuen nedenfor burgerikonet */
-right: 0;
-width: 100%;
-text-align: left;
-font-family: playfairdisplay;
-}
-
 .menu ul {
 list-style: none;
+display: flex;
+justify-content: space-between;
 }
 
 .menu ul li {
@@ -386,10 +355,9 @@ padding: 15px;
 }
 
 .menu ul li a {
-color: white;
+color: black;
 text-decoration: none;
 font-size: 18px;
-display: block;
 }
 
 /* Vis menuen, når checkboxen er markeret */
@@ -409,20 +377,31 @@ border-color: #da7897;
 display: flex;
 justify-content: space-between;
 text-decoration: none;
-padding-left: 30px;
-padding-right: 30px;
-
-
-
+padding-left: 15rem;
+padding-right: 15rem;
+margin-top: -2rem;
 }
 
 .morgenhr {
 margin-left: 30px;
 margin-right: 30px;
 margin-bottom: 15px;
-
+display: none;
 }
 
+.morgentekst {
+list-style-type: none;
+}
+
+.morgenmad{
+    margin-bottom: 0.5rem;
+}
+
+.morgenmadhr {
+    border: solid 0.1rem #da7897;
+    width: 8rem;
+    margin-bottom: 0.5rem;
+}
 a {
 text-decoration: none;
 color: black;
@@ -430,8 +409,11 @@ font-family: playfairdisplay;
 font-size: 1.2rem;
 }
 section {
-text-align: center;
+text-align: left;
 line-height: 1.8rem;
+padding: 3rem;
+list-style-type: none;
+margin-top: -3rem;
 }
 
 h4{
@@ -440,17 +422,18 @@ padding-top: 1.5rem;
 
 .morgenbilleder{
 position: relative;
-width: 275px;
-height: 275px;
+width: 200px;
+height: 200px;
+float: right;
 }
 
 .bollesnurre{
 border-radius: 44px;
 position: absolute;
-top: 33.33%;
-right: -15.33%;
-width: 45%;
-height: 65%;
+top: -260.67%;
+right: 14.67%;
+width: 100%;
+height: 120%;
 z-index: 2;
 object-fit: cover;
 }
@@ -458,10 +441,10 @@ object-fit: cover;
 .bowl{
 border-radius: 44px;
 position: absolute;
-top: 5.33%;
-right: 24.67%;
-width: 45%;
-height: 65%;
+top: -251.67%;
+right: 131.67%;
+width: 105%;
+height: 125%;
 z-index: 1;
 object-fit: cover;
 }
@@ -469,10 +452,10 @@ object-fit: cover;
 .snurre{
 border-radius: 44px;
 position: absolute;
-top: 62.33%;
-right: 21.67%;
-width: 45%; 
-height: 65%;
+top: -154.67%;
+right: 82.67%;
+width: 90%;
+height: 110%;
 z-index: 3;
 object-fit: cover;
 }
