--- a/css/events.css
+++ b/css/events.css
@@ -404,12 +404,14 @@ padding-left: 37rem;
 }
 
 .kreatext {
-font-size: 1rem;
+font-size: 1.3rem;
 text-align: justify;
 line-height: 1.8rem;
 padding-left: 40rem;
 padding-right: 3rem;
+padding-top: 1.5rem;
 }
+
 .kreaimages {
 position: relative;
 width: 275px;
@@ -418,10 +420,10 @@ height: 275px;
 .smykker{
 border-radius: 34px;
 position: absolute;
-top: -3.67%;
-left: 42%;
-width: 43%;
-height: 81%;
+top: -85.67%;
+left: 59%;
+width: 100%;
+height: 100%;
 z-index: 2;
 object-fit: cover;
 }
@@ -439,10 +441,10 @@ object-fit: cover;
 .strik {
 border-radius: 34px;
 position: absolute;
-top: 43%;
-left: 69%;
-width: 66%;
-height: 66%;
+top: 8%;
+left: 104%;
+width: 100%;
+height: 100%;
 z-index: 3;
 object-fit: cover;
 } 
