--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,7 @@ h2 {
 .menu ul li a {
     color: black;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 1.5rem;
 }
 
 /* Vis menuen, når checkboxen er markeret */
@@ -558,16 +558,19 @@ section.forsideevents {
 section.forsideeventstext {
     height: 50%;
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .eventshr{
-    margin-left: 30px;
-    margin-right: 30px;
+    border: solid 0.1rem #da7897;
+    width: 36rem;
+    margin-bottom: 1.5rem;
 }
 
 .eventstekst{
-    padding-top: 1rem;
-    font-size: 1rem;
+    font-size: 1.3rem;
     text-align: justify;
     line-height: 1.8rem;
     padding-left: 3rem;
@@ -633,8 +636,21 @@ section.forsideeventstext {
     position: absolute;
     box-shadow: 2px 2px 4px 0px grey;
     border: none;
-    
+    display: none;
 }
+
+.eventbuttondesktop {
+    background-color: #da7897;
+    border-radius: 20px;
+    width: 6.5rem;
+    padding: 10px 20px;
+    z-index: 4;
+    position: relative;
+    box-shadow: 2px 2px 4px 0px grey;
+    border: none;
+    margin-top: 4rem;
+}
+
 .lokationh2 {
     padding-top: 8rem;
 }
