--- a/css/deals.css
+++ b/css/deals.css
@@ -182,6 +182,9 @@ hr {
     text-align: center;
     padding-top: 5px;
 }
+.roundlogo {
+    display: none;
+}
 
 
 }
@@ -359,6 +362,9 @@ input {
 }
 button {
     font-size: 2rem;
+}
+.pbottom {
+    padding-bottom: 2rem;
 }
 }
 
