--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,8 @@ h2 {
     font-weight: bold;
 }
 
+
+
 section.forsideevents {
     display: flex;
     justify-content: space-between;
@@ -578,43 +580,44 @@ section.forsideeventstext {
 }
 
 .eventimg{
+    display: flex;
     position: relative;
     width: 275px;
     height: 275px;
-    
+    margin-left: 3rem;
 }
 
 .run{
     border-radius: 34px;
     position: absolute;
     top: 5.33%;
-    left: 80%;
-    width: 45%; /* Får dem til at fylde hele containeren */
-    height: 90%;
-    z-index: 1;
+    left: 109%;
+    width: 90%;
+    height: 130%;
+    z-index: 2;
     object-fit: cover;
 }
 
 .keramik {
     border-radius: 34px;
     position: absolute;
-    top: 64%;
-    left: 64%;
-    width: 40%; /* Får dem til at fylde hele containeren */
-    height: 50%;
+    top: 78%;
+    left: 29%;
+    width: 90%;
+    height: 90%;
     z-index: 3;
     object-fit: cover;
-   
 }
+
 .strik {
     border-radius: 44px;
     border-color: #da7897;
     position: absolute;
-    top: 5.33%;
-    right: 21.33%;
-    width: 50%; /* Får dem til at fylde hele containeren */
-    height: 70%;
-    z-index: 2;
+    top: -22.67%;
+    right: -15.67%;
+    width: 80%;
+    height: 110%;
+    z-index: 1;
     object-fit: cover;
 }
 
