--- a/css/events.css
+++ b/css/events.css
@@ -337,7 +337,7 @@ border-color: #da7897;
     padding-top: 3rem;
 }
 
-hr.inforhr{
+.runinforhr{
    padding: 3rem;
    border-color: #da7897;
    margin-left: 2rem;
