--- a/css/events.css
+++ b/css/events.css
@@ -519,6 +519,7 @@ object-fit: cover;
     display: flex;
     justify-content: space-between;
     margin-left:2rem ;
+    margin-bottom: 2rem;
 }
 
 .socialmediabox {
