--- a/css/menu.css
+++ b/css/menu.css
@@ -319,13 +319,16 @@ section {
     text-align: center;
     padding-top: 5px;
 }
+.roundlogo {
+    display: none;
+}
 }
 
 
 
 @media screen and (min-width: 392px) {
     body {
-        background: linear-gradient(180deg, #d1fed2, #ffffff) ;
+        background: linear-gradient(135deg, #d1fed2, #ffffff) ;
     }
     
     .forsidelogo {
@@ -555,17 +558,17 @@ margin-top: -1rem;
 
 .drikkevarerbilleder{
 position: relative;
-width: 275px;
-height: 275px;
+width: 200px;
+height: 200px;
 }
 
 .drinks{
 border-radius: 44px;
 position: absolute;
-top: -172.67%;
-right: -33.33%;
-width: 106%;
-height: 103%;
+top: -235.67%;
+right: -38.33%;
+width: 126%;
+height: 123%;
 z-index: 3;
 object-fit: cover;
 }
@@ -573,10 +576,10 @@ object-fit: cover;
 .juice{
 border-radius: 44px;
 position: absolute;
-top: -466.67%;
-right: -354.33%;
-width: 150%;
-height: 130%;
+top: -712.67%;
+right: -515.33%;
+width: 200%;
+height: 170%;
 z-index: 1;
 object-fit: cover;
 }
@@ -584,21 +587,21 @@ object-fit: cover;
 .kaffe{
 border-radius: 44px;
 position: absolute;
-top: -339.67%;
-right: -330.33%;
-width: 130%;
-height: 145%;
-z-index: 2;
+top: -552.67%;
+right: -494.33%;
+width: 175%;
+height: 185%;
+z-index: 4;
 object-fit: cover;
 }
 
 .kakao{
 border-radius: 44px;
 position: absolute;
-top: -439.67%;
-right: -210.33%;
-width: 120%;
-height: 130%;
+top: -631.67%;
+right: -325.33%;
+width: 175%;
+height: 185%;
 z-index: 4;
 object-fit: cover;
 }
@@ -606,10 +609,10 @@ object-fit: cover;
 .spritz{
 border-radius: 44px;
 position: absolute;
-top: -75.67%;
-right: -29.33%;
-width: 104%;
-height: 119%;
+top: -122.67%;
+right: -44.33%;
+width: 124%;
+height: 139%;
 z-index: 5;
 object-fit: cover;
 }
@@ -617,29 +620,43 @@ object-fit: cover;
 .vin{
 border-radius: 44px;
 position: absolute;
-top: -125.67%;
-right: -122.33%;
-width: 100%;
-height: 140%;
+top: -192.67%;
+right: -148.33%;
+width: 120%;
+height: 160%;
 z-index: 6;
 object-fit: cover;
 }
 
 .footerhr {
 margin-bottom: 2rem;
-margin-top: -5rem;
+margin-top: -8rem;
+}
+.footerbox {
+display: flex;
+justify-content: space-between;
+margin-left:2rem ;
+margin-bottom: 2rem;
+}
+
+.socialmediabox {
+display: flex;
+align-content: center;
+flex-direction: column;
+justify-content: center;
+font-size: 1rem;
 }
 .instagramlogo {
-width: 2rem;
-height: 2rem;
+width: 5rem;
+height: 5rem;
 margin-right: 1rem;
-margin-top: 1rem;
+margin-top: 2rem;
 
 }
 .facebooklogo {
-width: 2rem;
-height: 2rem;
-margin-top: 1rem;
+width: 5rem;
+height: 5rem;
+margin-top: 2rem;
 }
 
 .logoer{
@@ -649,6 +666,26 @@ justify-content: center;
 
 .footerinfo{
 text-align: center;
+font-size: 1rem;
 padding-top: 5px;
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+margin-top: 2rem;
+}
+button {
+    font-size: 2rem;
+}
+.pbottom {
+    padding-bottom: 2rem;
+}
+.aabningstider {
+display: flex;
+flex-direction: column;
+}
+.kontaktmig {
+display: flex;
+flex-direction: column;
+margin-right: 2rem;
 }
 }
